--- a/kakaopay-coupon/src/main/resources/application.yml
+++ b/kakaopay-coupon/src/main/resources/application.yml
@@ -19,13 +19,24 @@ spring:
     
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8&rewriteBatchedStatements=true
+    url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: 1q2w3e4r!@
     
     hikari:
       pool-name: HikariPoolZZZ
-  
+      data-source-properties: 
+        cachePrepStmts: true
+        useServerPrepStmts: true
+        prepStmtCacheSize: 250
+        prepStmtCacheSqlLimit: 2048
+        useLocalSessionState: true
+        rewriteBatchedStatements: true
+        cacheResultSetMetadata: true
+        cacheServerConfiguration: true
+        elideSetAutoCommits: true
+        maintainTimeStats: false
+           
 server:
   address: localhost
   port: 8080
