--- a/kakaopay-coupon/src/main/resources/application.yml
+++ b/kakaopay-coupon/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
+  cache:
+    redis:
+      time-to-live: 86400000 
   redis:
     host: localhost
     port: 6379
-  
+    
   jpa:
     hibernate:
       ddl-auto: update  # update, create-drop
